--- a/tui-calendar/src/js/view/template/week/time.hbs
+++ b/tui-calendar/src/js/view/template/week/time.hbs
@@ -1,3 +1,10 @@
+<div style="
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    border-right: 1px dashed rgb(229, 229, 229);
+    ">
+</div>
 <div class="{{CSS_PREFIX}}time-date-schedule-block-wrap" style="margin-right: {{styles.marginRight}};">
 {{#each matrices}}
     {{#each this}}
