--- a/frontend/frontend/src/App.css
+++ b/frontend/frontend/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+html {
+  overflow: hidden;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +40,6 @@
     transform: rotate(360deg);
   }
 }
+
+@import url("./css/common.css");
+@import url("./css/layout.css");
